Fix Overflow issues on IE

--- a/src/style/front-end/components/related-content.scss
+++ b/src/style/front-end/components/related-content.scss
@@ -21,6 +21,7 @@
         }
         &-content{
             font-weight: 600;
+            max-width:100%;
         }
     }
 }
