--- a/src/style/front-end/overides/_content-figure.scss
+++ b/src/style/front-end/overides/_content-figure.scss
@@ -1,3 +1,5 @@
 figure {
     margin: 0 !important;
+    max-width:100%;
+    min-height:1px;
 }
