--- a/src/style/front-end/overides/_variables.scss
+++ b/src/style/front-end/overides/_variables.scss
@@ -49,7 +49,9 @@ sans-serif;
         margin-bottom: 0 !important;
     }
 }
-
+.content p{
+    max-width:100%;
+}
 hr.wp-block-separator {
     height: 1px !important;
 }
